--- a/ShortCom/en.lproj/MainStoryboard.storyboard
+++ b/ShortCom/en.lproj/MainStoryboard.storyboard
@@ -185,7 +185,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.81392238451086962" green="0.52083421627063353" blue="0.6644676935678735" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="DRj-F9-ANd" firstAttribute="top" secondItem="52e-pr-huj" secondAttribute="top" constant="74" id="0kH-Rg-Sk0"/>
                             <constraint firstItem="2fB-MX-yir" firstAttribute="top" secondItem="52e-pr-huj" secondAttribute="top" constant="25" id="3Vc-LY-AcZ"/>
@@ -212,6 +212,73 @@
                 <exit id="rDF-eg-ff1" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="123" y="639"/>
+        </scene>
+        <!--Comment Detail View Controller-->
+        <scene sceneID="caZ-hL-hvE">
+            <objects>
+                <viewController id="fMK-nC-eBw" customClass="CommentDetailViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WX2-9O-8Ss">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EDg-0b-Dcq">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="didPushClose:" destination="fMK-nC-eBw" eventType="touchUpInside" id="8LL-HS-pbB"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oRG-rb-bOz">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="ブロックする">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="UserName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89x-QE-VoM">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="mac.png" translatesAutoresizingMaskIntoConstraints="NO" id="sCF-AW-ILW">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="114" id="4qf-uX-WUf"/>
+                                    <constraint firstAttribute="height" constant="121" id="h6a-ps-bE2"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Comment" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M2c-9r-RMr">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.38407167795819386" green="0.81392238451086962" blue="0.61904606501480086" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="89x-QE-VoM" firstAttribute="top" secondItem="WX2-9O-8Ss" secondAttribute="top" constant="13" id="C9H-eq-PTY"/>
+                            <constraint firstItem="oRG-rb-bOz" firstAttribute="top" secondItem="WX2-9O-8Ss" secondAttribute="top" constant="129" id="J6y-zU-Hd2"/>
+                            <constraint firstAttribute="bottom" secondItem="EDg-0b-Dcq" secondAttribute="bottom" constant="50" id="NEf-Sa-hFA"/>
+                            <constraint firstItem="M2c-9r-RMr" firstAttribute="leading" secondItem="oRG-rb-bOz" secondAttribute="leading" type="default" id="OO5-jn-ZQ0"/>
+                            <constraint firstItem="M2c-9r-RMr" firstAttribute="top" secondItem="sCF-AW-ILW" secondAttribute="top" type="default" id="RqA-sx-Guk"/>
+                            <constraint firstItem="sCF-AW-ILW" firstAttribute="top" secondItem="WX2-9O-8Ss" secondAttribute="top" constant="57" id="RuM-yz-3FZ"/>
+                            <constraint firstAttribute="trailing" secondItem="oRG-rb-bOz" secondAttribute="trailing" constant="45" id="cOc-fs-Rtl"/>
+                            <constraint firstItem="EDg-0b-Dcq" firstAttribute="leading" secondItem="WX2-9O-8Ss" secondAttribute="leading" constant="113" id="dkh-lF-xRi"/>
+                            <constraint firstItem="89x-QE-VoM" firstAttribute="leading" secondItem="WX2-9O-8Ss" secondAttribute="leading" constant="31" id="mor-4x-woV"/>
+                            <constraint firstItem="sCF-AW-ILW" firstAttribute="leading" secondItem="WX2-9O-8Ss" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="vfl-nu-7gx"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="InA-hP-mT9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="549" y="689"/>
         </scene>
         <!--Board View Controller - 掲示板-->
         <scene sceneID="jPv-ij-P1h">
@@ -265,6 +332,9 @@
                                             <constraint firstItem="baa-Uu-TzE" firstAttribute="top" secondItem="ENu-6m-ro8" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="nPD-7B-Puh"/>
                                             <constraint firstAttribute="trailing" secondItem="ENu-6m-ro8" secondAttribute="trailing" constant="82" id="une-Q3-XXv"/>
                                         </constraints>
+                                        <connections>
+                                            <segue destination="fMK-nC-eBw" kind="modal" id="bN4-BB-ZxK"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
@@ -328,7 +398,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.32040375594921111" green="0.69620629143396273" blue="0.81392238451086962" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="BTT-3h-zO9" firstAttribute="top" secondItem="bKW-wo-6L6" secondAttribute="top" constant="81" id="QHE-Nz-9Dv"/>
                             <constraint firstItem="xcg-3r-GwJ" firstAttribute="centerX" secondItem="BTT-3h-zO9" secondAttribute="centerX" type="default" id="U7k-Uk-RIe"/>
@@ -367,6 +437,66 @@
         <image name="mac.png" width="126" height="127"/>
         <image name="mac_mini.png" width="32" height="32"/>
     </resources>
+    <classes>
+        <class className="BoardViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BoardViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="commentUpdated:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="action" name="pushedButton:"/>
+                <relationship kind="outlet" name="postButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="CommentDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommentDetailViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="didPushClose:"/>
+            </relationships>
+        </class>
+        <class className="CommentViewCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommentViewCell.h"/>
+        </class>
+        <class className="ConfigViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ConfigViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="closeConfigModal:"/>
+                <relationship kind="action" name="didPushButton:"/>
+                <relationship kind="outlet" name="applyButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="openPickerButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="userImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="userNameText" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="PostModalViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PostModalViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="closeModalDialog:"/>
+                <relationship kind="outlet" name="closeButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="postText" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="ThreadDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ThreadDetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="nameText" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="UIStoryboardSegue" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="threadUpdated:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="action" name="userUpdated:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="outlet" name="configBar" candidateClass="UIToolbar"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
