--- a/ShortCom/en.lproj/MainStoryboard.storyboard
+++ b/ShortCom/en.lproj/MainStoryboard.storyboard
@@ -231,7 +231,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="didPushClose:" destination="fMK-nC-eBw" eventType="touchUpInside" id="8LL-HS-pbB"/>
+                                    <segue destination="Gwj-rr-enD" kind="unwind" unwindAction="commentDetailMoved:" id="iGw-w4-l1V"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oRG-rb-bOz">
@@ -243,6 +243,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="blockButton:" destination="fMK-nC-eBw" eventType="touchUpInside" id="0Du-9X-ZZv"/>
+                                </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="UserName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89x-QE-VoM">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -263,20 +266,26 @@
                         </subviews>
                         <color key="backgroundColor" red="0.38407167795819386" green="0.81392238451086962" blue="0.61904606501480086" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="89x-QE-VoM" firstAttribute="top" secondItem="WX2-9O-8Ss" secondAttribute="top" constant="13" id="C9H-eq-PTY"/>
+                            <constraint firstItem="89x-QE-VoM" firstAttribute="trailing" secondItem="sCF-AW-ILW" secondAttribute="trailing" type="default" id="08s-qo-KgU"/>
                             <constraint firstItem="oRG-rb-bOz" firstAttribute="top" secondItem="WX2-9O-8Ss" secondAttribute="top" constant="129" id="J6y-zU-Hd2"/>
-                            <constraint firstAttribute="bottom" secondItem="EDg-0b-Dcq" secondAttribute="bottom" constant="50" id="NEf-Sa-hFA"/>
+                            <constraint firstItem="EDg-0b-Dcq" firstAttribute="leading" secondItem="WX2-9O-8Ss" secondAttribute="leading" constant="104" id="Mzi-zD-1l3"/>
                             <constraint firstItem="M2c-9r-RMr" firstAttribute="leading" secondItem="oRG-rb-bOz" secondAttribute="leading" type="default" id="OO5-jn-ZQ0"/>
                             <constraint firstItem="M2c-9r-RMr" firstAttribute="top" secondItem="sCF-AW-ILW" secondAttribute="top" type="default" id="RqA-sx-Guk"/>
-                            <constraint firstItem="sCF-AW-ILW" firstAttribute="top" secondItem="WX2-9O-8Ss" secondAttribute="top" constant="57" id="RuM-yz-3FZ"/>
+                            <constraint firstAttribute="bottom" secondItem="EDg-0b-Dcq" secondAttribute="bottom" constant="45" id="b98-mF-hgK"/>
                             <constraint firstAttribute="trailing" secondItem="oRG-rb-bOz" secondAttribute="trailing" constant="45" id="cOc-fs-Rtl"/>
-                            <constraint firstItem="EDg-0b-Dcq" firstAttribute="leading" secondItem="WX2-9O-8Ss" secondAttribute="leading" constant="113" id="dkh-lF-xRi"/>
-                            <constraint firstItem="89x-QE-VoM" firstAttribute="leading" secondItem="WX2-9O-8Ss" secondAttribute="leading" constant="31" id="mor-4x-woV"/>
+                            <constraint firstItem="89x-QE-VoM" firstAttribute="top" secondItem="WX2-9O-8Ss" secondAttribute="top" constant="28" id="gzi-0y-RqU"/>
+                            <constraint firstItem="sCF-AW-ILW" firstAttribute="top" secondItem="89x-QE-VoM" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="ufd-yr-jQn"/>
                             <constraint firstItem="sCF-AW-ILW" firstAttribute="leading" secondItem="WX2-9O-8Ss" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="vfl-nu-7gx"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="blockButton" destination="oRG-rb-bOz" id="16Z-T2-08O"/>
+                        <outlet property="commentText" destination="M2c-9r-RMr" id="X4H-vq-vVn"/>
+                        <outlet property="userNameText" destination="89x-QE-VoM" id="J4q-Xn-LdF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="InA-hP-mT9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Gwj-rr-enD" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="549" y="689"/>
         </scene>
@@ -333,7 +342,7 @@
                                             <constraint firstAttribute="trailing" secondItem="ENu-6m-ro8" secondAttribute="trailing" constant="82" id="une-Q3-XXv"/>
                                         </constraints>
                                         <connections>
-                                            <segue destination="fMK-nC-eBw" kind="modal" id="bN4-BB-ZxK"/>
+                                            <segue destination="fMK-nC-eBw" kind="modal" identifier="commentDetail" id="bN4-BB-ZxK"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -437,6 +446,70 @@
         <image name="mac.png" width="126" height="127"/>
         <image name="mac_mini.png" width="32" height="32"/>
     </resources>
+    <classes>
+        <class className="BoardViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BoardViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="commentDetailMoved:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="action" name="commentUpdated:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="action" name="pushedButton:"/>
+                <relationship kind="outlet" name="postButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="CommentDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommentDetailViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="didPushClose:"/>
+                <relationship kind="outlet" name="blockButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="commentText" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="userNameText" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="CommentViewCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommentViewCell.h"/>
+        </class>
+        <class className="ConfigViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ConfigViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="closeConfigModal:"/>
+                <relationship kind="action" name="didPushButton:"/>
+                <relationship kind="outlet" name="applyButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="openPickerButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="userImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="userNameText" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="PostModalViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PostModalViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="closeModalDialog:"/>
+                <relationship kind="outlet" name="closeButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="postText" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="ThreadDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ThreadDetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="nameText" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="UIStoryboardSegue" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="threadUpdated:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="action" name="userUpdated:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="outlet" name="configBar" candidateClass="UIToolbar"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
